Update generated content

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -498,6 +498,33 @@
     ]
   },
   {
+    "title": "Vá sọ bằng lưới titan cho người bệnh u não",
+    "content": "Bà Hoa, 50 tuổi, đã trải qua phẫu thuật để loại bỏ hai khối u màng não lớn và vá sọ bằng lưới titan tại Bệnh viện Đa khoa Tâm Anh Hà Nội. Phẫu thuật được thực hiện bởi bác sĩ Phạm Văn Tín, sử dụng các kỹ thuật hiện đại như hệ thống định vị Navigation và kính vi phẫu giúp giảm nguy cơ tổn thương thần kinh. Sau phẫu thuật, bà Hoa hồi phục nhanh chóng và được xuất viện sau một tuần, với khuyến cáo chăm sóc và theo dõi sức khỏe sau mổ.",
+    "link": "https://vnexpress.net/va-so-bang-luoi-titan-cho-nguoi-benh-u-nao-4860727.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Bà Hoa đã làm gì để điều trị khối u não của mình?",
+    "answers": [
+      {
+        "text": "Phẫu thuật loại bỏ khối u và vá sọ bằng lưới titan.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ uống thuốc mà không phẫu thuật.",
+        "correct": false
+      },
+      {
+        "text": "Điều trị bằng phương pháp đông y.",
+        "correct": false
+      },
+      {
+        "text": "Tự mình tìm cách chữa trị tại nhà.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Người Mỹ khó chịu với tiền boa",
     "content": "Một khảo sát của WalletHub cho thấy gần 90% người Mỹ cảm thấy khó chịu với việc phải chi tiền boa, dù nhiều người vẫn làm điều này vì áp lực xã hội. Hầu hết các dịch vụ ở Mỹ đều yêu cầu tiền boa, và nhiều người cho rằng việc này nên được cấm hoặc thay thế bằng một hệ thống lương cố định cho nhân viên. Xu hướng này đang gia tăng, với 60% người được hỏi cho rằng doanh nghiệp đang dựa vào tiền boa để trả lương cho nhân viên.",
     "link": "https://vnexpress.net/nguoi-my-kho-chiu-voi-tien-boa-4860746.html",
@@ -1568,6 +1595,33 @@
     ]
   },
   {
+    "title": "Bỏ tập gym vì bị PT 'chèo kéo'",
+    "content": "Chị Ánh, 43 tuổi, đã bỏ tập gym sau khi bị huấn luyện viên cá nhân (PT) chèo kéo mua thực phẩm chức năng với giá cao, gây ức chế cho chị. Mặc dù đã chi hơn 50 triệu đồng cho gói tập, nhưng những lần áp lực mua hàng từ PT đã khiến chị quyết định ngừng tập luyện. Tình trạng tương tự cũng xảy ra với nhiều khách hàng khác, dẫn đến việc họ cảm thấy phiền phức và không hài lòng với dịch vụ. Các bác sĩ khuyến cáo rằng việc dùng thực phẩm chức năng không thể thay thế chế độ ăn uống và lối sống lành mạnh, và người tiêu dùng cần cẩn trọng khi chọn mua sản phẩm và dịch vụ.",
+    "link": "https://vnexpress.net/bo-tap-gym-vi-bi-pt-cheo-keo-4857898.html",
+    "cat": "suc-khoe",
+    "positivity": 2,
+    "importance": 7,
+    "question": "Tại sao chị Ánh quyết định bỏ tập gym?",
+    "answers": [
+      {
+        "text": "Vì bị PT chèo kéo mua thực phẩm chức năng",
+        "correct": true
+      },
+      {
+        "text": "Vì không thích tập luyện",
+        "correct": false
+      },
+      {
+        "text": "Vì sức khỏe không tốt",
+        "correct": false
+      },
+      {
+        "text": "Vì muốn tiết kiệm tiền",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Một ngày của cụ bà 97 tuổi mê chạy bộ",
     "content": "Cụ bà Nguyễn Thị Huynh, 97 tuổi, sống tại TP Hà Tĩnh, duy trì thói quen chạy bộ hai lần mỗi ngày. Hàng sáng, cụ dậy sớm để tập thể dục và ăn sáng đầy đủ trước khi tham gia các hoạt động khác. Dù tuổi cao, cụ vẫn tích cực tham gia các lớp thể dục tại phòng gym và thường xuyên chạy bộ quanh công viên. Cụ cũng được con cháu ghi lại những khoảnh khắc tập luyện và chia sẻ trên mạng xã hội, thu hút sự chú ý của nhiều người.",
     "link": "https://vnexpress.net/mot-ngay-cua-cu-ba-97-tuoi-me-chay-bo-4860200.html",
@@ -1594,33 +1648,6 @@
       },
       {
         "text": "92 tuổi",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Bỏ tập gym vì bị PT 'chèo kéo'",
-    "content": "Chị Ánh, 43 tuổi, đã bỏ tập gym sau khi bị huấn luyện viên cá nhân (PT) chèo kéo mua thực phẩm chức năng với giá cao, gây ức chế cho chị. Mặc dù đã chi hơn 50 triệu đồng cho gói tập, nhưng những lần áp lực mua hàng từ PT đã khiến chị quyết định ngừng tập luyện. Tình trạng tương tự cũng xảy ra với nhiều khách hàng khác, dẫn đến việc họ cảm thấy phiền phức và không hài lòng với dịch vụ. Các bác sĩ khuyến cáo rằng việc dùng thực phẩm chức năng không thể thay thế chế độ ăn uống và lối sống lành mạnh, và người tiêu dùng cần cẩn trọng khi chọn mua sản phẩm và dịch vụ.",
-    "link": "https://vnexpress.net/bo-tap-gym-vi-bi-pt-cheo-keo-4857898.html",
-    "cat": "suc-khoe",
-    "positivity": 2,
-    "importance": 7,
-    "question": "Tại sao chị Ánh quyết định bỏ tập gym?",
-    "answers": [
-      {
-        "text": "Vì bị PT chèo kéo mua thực phẩm chức năng",
-        "correct": true
-      },
-      {
-        "text": "Vì không thích tập luyện",
-        "correct": false
-      },
-      {
-        "text": "Vì sức khỏe không tốt",
-        "correct": false
-      },
-      {
-        "text": "Vì muốn tiết kiệm tiền",
         "correct": false
       }
     ]
@@ -2549,33 +2576,6 @@
     ]
   },
   {
-    "title": "Ăn trứng khi mắc sốt xuất huyết có ảnh hưởng tiêu hóa?",
-    "content": "Trẻ mắc sốt xuất huyết có thể ăn trứng nhưng cần lưu ý đến tình trạng sức khỏe. Khi trẻ sốt cao, không nên cho trẻ ăn trứng vì hệ tiêu hóa có thể hoạt động kém và protein trong trứng có thể gây khó tiêu. Sau khi cơn sốt giảm và hệ tiêu hóa ổn định, trứng có thể được bổ sung vào chế độ ăn, nhưng cần chế biến cẩn thận và ăn vào buổi sáng để tốt cho tiêu hóa.",
-    "link": "https://vnexpress.net/an-trung-khi-mac-sot-xuat-huyet-co-anh-huong-tieu-hoa-4860513.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Có nên cho trẻ ăn trứng khi mắc sốt xuất huyết không?",
-    "answers": [
-      {
-        "text": "Có, nhưng chỉ khi trẻ không sốt cao.",
-        "correct": true
-      },
-      {
-        "text": "Không, tuyệt đối không nên cho ăn.",
-        "correct": false
-      },
-      {
-        "text": "Có, trẻ có thể ăn bất kỳ lúc nào.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng chỉ ăn trứng sống.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "9 năm vô sinh do không có tinh trùng",
     "content": "Anh Yeo, 51 tuổi, đã trải qua 9 năm vô sinh do không có tinh trùng và mới phát hiện nguyên nhân sau khi kết hôn. Sau khi khám tại Bệnh viện Đa khoa Tâm Anh TP HCM, anh được chẩn đoán với tình trạng teo tinh hoàn và được bác sĩ chỉ định điều trị bằng kỹ thuật micro-TESE để tìm tinh trùng. Kết quả là tìm thấy 15 tinh trùng, giúp anh và vợ thực hiện thụ tinh trong ống nghiệm và hiện tại họ đã có thai khoảng 8 tuần.",
     "link": "https://vnexpress.net/9-nam-vo-sinh-do-khong-co-tinh-trung-4860218.html",
@@ -2629,6 +2629,33 @@
       },
       {
         "text": "Tránh ăn rau quả hoàn toàn.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Ăn trứng khi mắc sốt xuất huyết có ảnh hưởng tiêu hóa?",
+    "content": "Trẻ mắc sốt xuất huyết có thể ăn trứng nhưng cần lưu ý đến tình trạng sức khỏe. Khi trẻ sốt cao, không nên cho trẻ ăn trứng vì hệ tiêu hóa có thể hoạt động kém và protein trong trứng có thể gây khó tiêu. Sau khi cơn sốt giảm và hệ tiêu hóa ổn định, trứng có thể được bổ sung vào chế độ ăn, nhưng cần chế biến cẩn thận và ăn vào buổi sáng để tốt cho tiêu hóa.",
+    "link": "https://vnexpress.net/an-trung-khi-mac-sot-xuat-huyet-co-anh-huong-tieu-hoa-4860513.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Có nên cho trẻ ăn trứng khi mắc sốt xuất huyết không?",
+    "answers": [
+      {
+        "text": "Có, nhưng chỉ khi trẻ không sốt cao.",
+        "correct": true
+      },
+      {
+        "text": "Không, tuyệt đối không nên cho ăn.",
+        "correct": false
+      },
+      {
+        "text": "Có, trẻ có thể ăn bất kỳ lúc nào.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng chỉ ăn trứng sống.",
         "correct": false
       }
     ]
@@ -4238,28 +4265,28 @@
     ]
   },
   {
-    "title": "Từ Canada sang Việt Nam lần hai để thay khớp gối",
-    "content": "Bà Christina Phypers, 71 tuổi, từ Canada đã trở lại Việt Nam để phẫu thuật thay khớp gối phải sau khi đã thay khớp gối trái thành công hai năm trước. Bà đã chọn Bệnh viện Đa khoa Tâm Anh Hà Nội để thực hiện phẫu thuật do chi phí hợp lý và kỹ thuật tiên tiến. Sau phẫu thuật, bà có thể hồi phục nhanh chóng và dự định khám phá nhiều địa điểm nổi tiếng tại Việt Nam trong thời gian 4 tháng tới.",
-    "link": "https://vnexpress.net/tu-canada-sang-viet-nam-lan-hai-de-thay-khop-goi-4859624.html",
+    "title": "Dự báo nguy cơ sinh non để tìm cách giữ thai nhi khỏe mạnh",
+    "content": "Bài viết đề cập đến việc dự báo nguy cơ sinh non để giữ thai nhi khỏe mạnh, thông qua các phương pháp như xét nghiệm PartoSure. Chị Thủy và chị Mai là hai trường hợp được điều trị khi có nguy cơ sinh non, với các biện pháp can thiệp y tế kịp thời giúp bảo vệ thai nhi. Bác sĩ khuyến cáo thai phụ cần chú ý các dấu hiệu cảnh báo và đến cơ sở y tế khi có nghi ngờ.",
+    "link": "https://vnexpress.net/du-bao-nguy-co-sinh-non-de-tim-cach-giu-thai-nhi-khoe-manh-4860236.html",
     "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 7,
-    "question": "Bà Christina Phypers đã làm gì khi trở lại Việt Nam?",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Làm thế nào để dự báo nguy cơ sinh non và giữ thai nhi khỏe mạnh?",
     "answers": [
       {
-        "text": "Thay khớp gối phải",
+        "text": "Sử dụng xét nghiệm PartoSure để đánh giá nguy cơ sinh non.",
         "correct": true
       },
       {
-        "text": "Khám bệnh khác",
+        "text": "Chỉ cần nghỉ ngơi nhiều hơn khi mang thai.",
         "correct": false
       },
       {
-        "text": "Tham quan du lịch",
+        "text": "Uống vitamin để cải thiện sức khỏe thai nhi.",
         "correct": false
       },
       {
-        "text": "Học tiếng Việt",
+        "text": "Lựa chọn chế độ ăn uống bình thường mà không cần thay đổi.",
         "correct": false
       }
     ]
@@ -4292,28 +4319,28 @@
     ]
   },
   {
-    "title": "Dự báo nguy cơ sinh non để tìm cách giữ thai nhi khỏe mạnh",
-    "content": "Bài viết đề cập đến việc dự báo nguy cơ sinh non để giữ thai nhi khỏe mạnh, thông qua các phương pháp như xét nghiệm PartoSure. Chị Thủy và chị Mai là hai trường hợp được điều trị khi có nguy cơ sinh non, với các biện pháp can thiệp y tế kịp thời giúp bảo vệ thai nhi. Bác sĩ khuyến cáo thai phụ cần chú ý các dấu hiệu cảnh báo và đến cơ sở y tế khi có nghi ngờ.",
-    "link": "https://vnexpress.net/du-bao-nguy-co-sinh-non-de-tim-cach-giu-thai-nhi-khoe-manh-4860236.html",
+    "title": "Từ Canada sang Việt Nam lần hai để thay khớp gối",
+    "content": "Bà Christina Phypers, 71 tuổi, từ Canada đã trở lại Việt Nam để phẫu thuật thay khớp gối phải sau khi đã thay khớp gối trái thành công hai năm trước. Bà đã chọn Bệnh viện Đa khoa Tâm Anh Hà Nội để thực hiện phẫu thuật do chi phí hợp lý và kỹ thuật tiên tiến. Sau phẫu thuật, bà có thể hồi phục nhanh chóng và dự định khám phá nhiều địa điểm nổi tiếng tại Việt Nam trong thời gian 4 tháng tới.",
+    "link": "https://vnexpress.net/tu-canada-sang-viet-nam-lan-hai-de-thay-khop-goi-4859624.html",
     "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Làm thế nào để dự báo nguy cơ sinh non và giữ thai nhi khỏe mạnh?",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Bà Christina Phypers đã làm gì khi trở lại Việt Nam?",
     "answers": [
       {
-        "text": "Sử dụng xét nghiệm PartoSure để đánh giá nguy cơ sinh non.",
+        "text": "Thay khớp gối phải",
         "correct": true
       },
       {
-        "text": "Chỉ cần nghỉ ngơi nhiều hơn khi mang thai.",
+        "text": "Khám bệnh khác",
         "correct": false
       },
       {
-        "text": "Uống vitamin để cải thiện sức khỏe thai nhi.",
+        "text": "Tham quan du lịch",
         "correct": false
       },
       {
-        "text": "Lựa chọn chế độ ăn uống bình thường mà không cần thay đổi.",
+        "text": "Học tiếng Việt",
         "correct": false
       }
     ]
@@ -4847,37 +4874,6 @@
       },
       {
         "text": "Vì Lê Phương muốn có một gia đình hạnh phúc.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Hòn Sơn Chà vừa được Đà Nẵng tiếp nhận từ Huế có tiềm năng du lịch như thế nào?",
-    "content": "Hòn Sơn Chà, một hòn đảo hoang sơ dưới chân núi Hải Vân, vừa được thành phố Đà Nẵng tiếp nhận từ thành phố Huế. Đảo có hệ sinh thái biển phong phú với nhiều loại san hô và cá quý, cùng với bãi cát trắng và nước biển trong vắt, tạo điều kiện lý tưởng cho du lịch. Đà Nẵng dự định phát triển hòn Sơn Chà thành khu nghỉ dưỡng sinh thái cao cấp, nhắm đến đối tượng khách du lịch siêu giàu, nhằm khai thác tiềm năng du lịch lớn của hòn đảo này.",
-    "link": "https://tuoitre.vn/hon-son-cha-vua-duoc-da-nang-tiep-nhan-tu-hue-co-tiem-nang-du-lich-nhu-the-nao-20250312105542699.htm",
-    "cat": "du-lich",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Hòn Sơn Chà có tiềm năng du lịch như thế nào?",
-    "answers": [
-      {
-        "text": "Hòn Sơn Chà có hệ sinh thái phong phú và cảnh đẹp tự nhiên hấp dẫn.",
-        "correct": true
-      },
-      {
-        "text": "Hòn Sơn Chà không có gì đặc biệt.",
-        "correct": false
-      },
-      {
-        "text": "Hòn Sơn Chà chỉ là một hòn đảo nhỏ không thu hút khách du lịch.",
-        "correct": false
-      },
-      {
-        "text": "Hòn Sơn Chà đã được phát triển thành khu nghỉ dưỡng từ lâu.",
-        "correct": false
-      },
-      {
-        "text": "Hòn Sơn Chà không có hải sản tươi ngon.",
         "correct": false
       }
     ]
