--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,33 @@
     */
     const newsData = [
   {
+    "title": "Khởi tố 18 thanh niên cầm hung khí tụ tập đánh nhau",
+    "content": "Cơ quan Cảnh sát điều tra Công an tỉnh Thái Bình đã khởi tố 18 thanh thiếu niên vì hành vi cầm hung khí tụ tập đánh nhau. Vụ việc xảy ra vào rạng sáng ngày 9-3, khi một nhóm thanh niên từ huyện Đông Hưng và Quỳnh Phụ đã chặn nhóm thanh niên từ huyện Kiến Xương, dẫn đến ẩu đả. Hai thanh niên trong nhóm Kiến Xương bị thương nặng và cơ quan công an đã thu giữ nhiều hung khí và phương tiện liên quan đến vụ việc. Hiện vụ án đang được điều tra mở rộng để làm rõ thêm các hành vi phạm tội.",
+    "link": "https://tuoitre.vn/khoi-to-18-thanh-nien-cam-hung-khi-tu-tap-danh-nhau-20250313110638761.htm",
+    "cat": "phap-luat",
+    "positivity": 2,
+    "importance": 7,
+    "question": "Tại sao 18 thanh niên ở Thái Bình bị khởi tố?",
+    "answers": [
+      {
+        "text": "Vì tụ tập đánh nhau cầm hung khí",
+        "correct": true
+      },
+      {
+        "text": "Vì trộm cắp tài sản",
+        "correct": false
+      },
+      {
+        "text": "Vì tham gia đánh bạc",
+        "correct": false
+      },
+      {
+        "text": "Vì gây rối trật tự giao thông",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "TP.HCM tạm dừng việc tính thuế nhà đất, người dân chờ sớm mở lại",
     "content": "Từ ngày 12 tháng 3 năm 2025, TP.HCM đã tạm dừng việc tính thuế nhà đất do các chi cục thuế thực hiện bàn giao dữ liệu và chuyển đổi mô hình tổ chức bộ máy mới. Thời gian tạm dừng kéo dài từ 17h ngày 12-3 đến 8h ngày 17-3, trong thời gian này, người dân có thể tiếp tục gửi hồ sơ qua hệ thống thuế điện tử hoặc trực tiếp tại cơ quan thuế. Việc tạm dừng này nhằm nâng cấp hệ thống thuế điện tử và cải thiện quy trình quản lý thuế.",
     "link": "https://tuoitre.vn/tp-hcm-tam-dung-viec-tinh-thue-nha-dat-nguoi-dan-cho-som-mo-lai-20250313104413914.htm",
@@ -1460,33 +1487,6 @@
     ]
   },
   {
-    "title": "Tranh luận đề xuất sinh con thứ hai được nghỉ 7 tháng",
-    "content": "Đề xuất tăng thời gian nghỉ thai sản lên 7 tháng cho phụ nữ sinh con thứ hai đang gây tranh luận trong xã hội Việt Nam. Nhiều lao động nữ bày tỏ lo ngại về khả năng mất việc làm hơn là việc được nghỉ dài hơn. Họ cho rằng việc tăng thời gian nghỉ không giải quyết được gốc rễ vấn đề mà họ đang đối mặt, như áp lực tài chính và khó khăn trong việc tìm việc làm. Các doanh nghiệp cũng lo ngại về ảnh hưởng của đề xuất này đến hoạt động sản xuất và tuyển dụng.",
-    "link": "https://vnexpress.net/tranh-luan-de-xuat-sinh-con-thu-hai-duoc-nghi-7-thang-4860053.html",
-    "cat": "gia-dinh",
-    "positivity": 5,
-    "importance": 8,
-    "question": "Đề xuất nghỉ thai sản 7 tháng có được ủng hộ không?",
-    "answers": [
-      {
-        "text": "Nhiều lao động nữ lo ngại về việc mất việc làm",
-        "correct": true
-      },
-      {
-        "text": "Tất cả mọi người đều ủng hộ",
-        "correct": false
-      },
-      {
-        "text": "Đề xuất này không có ý nghĩa gì",
-        "correct": false
-      },
-      {
-        "text": "Đề xuất chỉ được ủng hộ bởi doanh nghiệp",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Bí quyết giúp mẹ ba con giảm 10 kg trong 90 ngày",
     "content": "Giang, 34 tuổi, đã giảm 10 kg trong 90 ngày nhờ vào chế độ ăn uống lành mạnh và tập luyện thể chất. Sau khi nhận thấy sự thay đổi tiêu cực về ngoại hình và sức khỏe, cô quyết định thay đổi lối sống bằng cách ăn đủ nhóm chất dinh dưỡng và tập luyện 5 ngày mỗi tuần. Kết quả, cân nặng của cô giảm từ 59 kg xuống còn 49 kg, vòng bụng thu gọn và sức khỏe được cải thiện rõ rệt. Giang hiện duy trì lối sống lành mạnh và cảm thấy tự tin hơn về bản thân.",
     "link": "https://vnexpress.net/bi-quyet-giup-me-ba-con-giam-10-kg-trong-90-ngay-4860179.html",
@@ -1513,6 +1513,33 @@
       },
       {
         "text": "150 ngày",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Tranh luận đề xuất sinh con thứ hai được nghỉ 7 tháng",
+    "content": "Đề xuất tăng thời gian nghỉ thai sản lên 7 tháng cho phụ nữ sinh con thứ hai đang gây tranh luận trong xã hội Việt Nam. Nhiều lao động nữ bày tỏ lo ngại về khả năng mất việc làm hơn là việc được nghỉ dài hơn. Họ cho rằng việc tăng thời gian nghỉ không giải quyết được gốc rễ vấn đề mà họ đang đối mặt, như áp lực tài chính và khó khăn trong việc tìm việc làm. Các doanh nghiệp cũng lo ngại về ảnh hưởng của đề xuất này đến hoạt động sản xuất và tuyển dụng.",
+    "link": "https://vnexpress.net/tranh-luan-de-xuat-sinh-con-thu-hai-duoc-nghi-7-thang-4860053.html",
+    "cat": "gia-dinh",
+    "positivity": 5,
+    "importance": 8,
+    "question": "Đề xuất nghỉ thai sản 7 tháng có được ủng hộ không?",
+    "answers": [
+      {
+        "text": "Nhiều lao động nữ lo ngại về việc mất việc làm",
+        "correct": true
+      },
+      {
+        "text": "Tất cả mọi người đều ủng hộ",
+        "correct": false
+      },
+      {
+        "text": "Đề xuất này không có ý nghĩa gì",
+        "correct": false
+      },
+      {
+        "text": "Đề xuất chỉ được ủng hộ bởi doanh nghiệp",
         "correct": false
       }
     ]
@@ -2723,33 +2750,6 @@
     ]
   },
   {
-    "title": "Người bệnh suy giáp nên giảm cân thế nào",
-    "content": "Người bệnh suy giáp có thể giảm cân bằng cách tăng cường chất xơ, ưu tiên ăn nhiều trái cây và chọn protein cùng chất béo lành mạnh. Suy giáp làm chậm quá trình trao đổi chất, khiến việc giảm cân trở nên khó khăn hơn. Bổ sung chất xơ và rau quả không chỉ hỗ trợ giảm cân mà còn giúp duy trì sức khỏe tuyến giáp. Thêm vào đó, tập thể dục thường xuyên, ngủ đủ giấc và ăn uống lành mạnh đóng vai trò quan trọng trong quá trình giảm cân của người bệnh.",
-    "link": "https://vnexpress.net/nguoi-benh-suy-giap-nen-giam-can-the-nao-4860368.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Người bệnh suy giáp nên giảm cân bằng cách nào?",
-    "answers": [
-      {
-        "text": "Tăng cường chất xơ và ăn nhiều trái cây.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ ăn thịt đỏ.",
-        "correct": false
-      },
-      {
-        "text": "Ngủ ít hơn 7 tiếng mỗi đêm.",
-        "correct": false
-      },
-      {
-        "text": "Tránh ăn rau quả hoàn toàn.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "9 năm vô sinh do không có tinh trùng",
     "content": "Anh Yeo, 51 tuổi, đã trải qua 9 năm vô sinh do không có tinh trùng và mới phát hiện nguyên nhân sau khi kết hôn. Sau khi khám tại Bệnh viện Đa khoa Tâm Anh TP HCM, anh được chẩn đoán với tình trạng teo tinh hoàn và được bác sĩ chỉ định điều trị bằng kỹ thuật micro-TESE để tìm tinh trùng. Kết quả là tìm thấy 15 tinh trùng, giúp anh và vợ thực hiện thụ tinh trong ống nghiệm và hiện tại họ đã có thai khoảng 8 tuần.",
     "link": "https://vnexpress.net/9-nam-vo-sinh-do-khong-co-tinh-trung-4860218.html",
@@ -2776,6 +2776,33 @@
       },
       {
         "text": "Vấn đề tâm lý",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Người bệnh suy giáp nên giảm cân thế nào",
+    "content": "Người bệnh suy giáp có thể giảm cân bằng cách tăng cường chất xơ, ưu tiên ăn nhiều trái cây và chọn protein cùng chất béo lành mạnh. Suy giáp làm chậm quá trình trao đổi chất, khiến việc giảm cân trở nên khó khăn hơn. Bổ sung chất xơ và rau quả không chỉ hỗ trợ giảm cân mà còn giúp duy trì sức khỏe tuyến giáp. Thêm vào đó, tập thể dục thường xuyên, ngủ đủ giấc và ăn uống lành mạnh đóng vai trò quan trọng trong quá trình giảm cân của người bệnh.",
+    "link": "https://vnexpress.net/nguoi-benh-suy-giap-nen-giam-can-the-nao-4860368.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Người bệnh suy giáp nên giảm cân bằng cách nào?",
+    "answers": [
+      {
+        "text": "Tăng cường chất xơ và ăn nhiều trái cây.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ ăn thịt đỏ.",
+        "correct": false
+      },
+      {
+        "text": "Ngủ ít hơn 7 tiếng mỗi đêm.",
+        "correct": false
+      },
+      {
+        "text": "Tránh ăn rau quả hoàn toàn.",
         "correct": false
       }
     ]
@@ -3206,33 +3233,6 @@
     ]
   },
   {
-    "title": "9 loại rau quả làm mát cơ thể khi nắng nóng",
-    "content": "Trong thời tiết nắng nóng, việc bổ sung nước và chất điện giải là rất quan trọng để duy trì sức khỏe. Bài viết giới thiệu 9 loại rau quả giúp làm mát cơ thể, bao gồm nước dừa, dưa hấu, dưa chuột, rau lá xanh, và cam quýt. Những thực phẩm này không chỉ giàu nước mà còn cung cấp nhiều vitamin và khoáng chất thiết yếu, giúp cơ thể cân bằng và phòng tránh các vấn đề sức khỏe do nhiệt độ cao.",
-    "link": "https://vnexpress.net/9-loai-rau-qua-lam-mat-co-the-khi-nang-nong-4860366.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Những loại rau quả nào giúp làm mát cơ thể khi nắng nóng?",
-    "answers": [
-      {
-        "text": "Nước dừa, dưa hấu, dưa chuột, rau lá xanh, cam quýt",
-        "correct": true
-      },
-      {
-        "text": "Cà chua, khoai tây, bí ngô",
-        "correct": false
-      },
-      {
-        "text": "Nho, chuối, xoài, dứa",
-        "correct": false
-      },
-      {
-        "text": "Bông cải xanh, khoai lang, hành tây",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Rau củ quả nào tốt cho não?",
     "content": "Bài viết nhấn mạnh rằng bên cạnh các thực phẩm như trứng, hải sản và thịt, rau củ quả cũng có vai trò quan trọng trong việc phát triển trí não của trẻ. Nhiều loại rau củ quả chứa chất dinh dưỡng cần thiết giúp thúc đẩy sự phát triển trí não, điều này thường bị bỏ qua trong chế độ ăn uống của trẻ. Việc bổ sung rau củ quả vào khẩu phần ăn của trẻ sẽ không chỉ giúp sức khỏe tổng thể mà còn hỗ trợ tốt cho sự phát triển trí tuệ.",
     "link": "https://vnexpress.net/rau-cu-qua-nao-tot-cho-nao-4860417.html",
@@ -3255,6 +3255,33 @@
       },
       {
         "text": "Chỉ một số loại rau củ mới tốt cho não.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "9 loại rau quả làm mát cơ thể khi nắng nóng",
+    "content": "Trong thời tiết nắng nóng, việc bổ sung nước và chất điện giải là rất quan trọng để duy trì sức khỏe. Bài viết giới thiệu 9 loại rau quả giúp làm mát cơ thể, bao gồm nước dừa, dưa hấu, dưa chuột, rau lá xanh, và cam quýt. Những thực phẩm này không chỉ giàu nước mà còn cung cấp nhiều vitamin và khoáng chất thiết yếu, giúp cơ thể cân bằng và phòng tránh các vấn đề sức khỏe do nhiệt độ cao.",
+    "link": "https://vnexpress.net/9-loai-rau-qua-lam-mat-co-the-khi-nang-nong-4860366.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Những loại rau quả nào giúp làm mát cơ thể khi nắng nóng?",
+    "answers": [
+      {
+        "text": "Nước dừa, dưa hấu, dưa chuột, rau lá xanh, cam quýt",
+        "correct": true
+      },
+      {
+        "text": "Cà chua, khoai tây, bí ngô",
+        "correct": false
+      },
+      {
+        "text": "Nho, chuối, xoài, dứa",
+        "correct": false
+      },
+      {
+        "text": "Bông cải xanh, khoai lang, hành tây",
         "correct": false
       }
     ]
@@ -4739,64 +4766,6 @@
       },
       {
         "text": "Thiếu dinh dưỡng",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Nữ runner phủ nhận dùng gậy tiếp sức đánh đối thủ",
-    "content": "Nữ runner Alaila Everett phủ nhận rằng cô đã cố ý đánh đối thủ Kaelen Tucker bằng gậy tiếp sức trong một cuộc thi tại Virginia. Everett cho biết cô chỉ bị mất thăng bằng và vô tình vung gậy trúng đầu Tucker. Tuy nhiên, video ghi lại sự việc cho thấy động thái của cô có vẻ như có chủ ý, dẫn đến những chỉ trích và lời đe dọa từ dư luận. Everett đã khóc khi lên tiếng về vụ việc và cho biết cô đã cố gắng liên lạc với Tucker nhưng bị chặn.",
-    "link": "https://vnexpress.net/nu-runner-phu-nhan-dung-gay-tiep-suc-danh-doi-thu-4860232.html",
-    "cat": "the-thao",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Alaila Everett có khẳng định điều gì về hành động của mình trong sự việc với Kaelen Tucker?",
-    "answers": [
-      {
-        "text": "Cô ấy phủ nhận cố ý đánh đối thủ.",
-        "correct": true
-      },
-      {
-        "text": "Cô ấy thừa nhận đã cố ý đánh đối thủ.",
-        "correct": false
-      },
-      {
-        "text": "Cô ấy không biết gì về sự việc.",
-        "correct": false
-      },
-      {
-        "text": "Cô ấy đã xin lỗi Tucker ngay lập tức.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Quảng Ninh: chưa cấp phép dịch vụ ăn uống trong hang động",
-    "content": "Sở Văn hóa, Thể thao và Du lịch tỉnh Quảng Ninh đã thông báo rằng chưa có đơn vị nào được cấp phép để tổ chức các dịch vụ ăn uống và biểu diễn nghệ thuật trong hang động tại Cẩm Phả. Mặc dù Công ty APC Corporation đã thông báo về kế hoạch tổ chức trải nghiệm ẩm thực trong hang Dơi, chính quyền địa phương khẳng định chưa nhận được hồ sơ chính thức nào. Việc phát triển các sản phẩm du lịch trong khu vực này vẫn đang trong giai đoạn đề xuất và cần được xem xét kỹ lưỡng theo quy định hiện hành.",
-    "link": "https://tuoitre.vn/quang-ninh-chua-cap-phep-dich-vu-an-uong-trong-hang-dong-20250312112026028.htm",
-    "cat": "du-lich",
-    "positivity": 5,
-    "importance": 7,
-    "question": "Có dịch vụ ăn uống nào được cấp phép trong hang động tại Quảng Ninh không?",
-    "answers": [
-      {
-        "text": "Không, chưa có dịch vụ nào được cấp phép.",
-        "correct": true
-      },
-      {
-        "text": "Có, dịch vụ đã được cấp phép.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ có dịch vụ biểu diễn nghệ thuật được cấp phép.",
-        "correct": false
-      },
-      {
-        "text": "Có dịch vụ ăn uống chỉ dành cho khách du lịch quốc tế.",
-        "correct": false
-      },
-      {
-        "text": "Chưa có thông tin rõ ràng về điều này.",
         "correct": false
       }
     ]
