Update generated content

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -529,6 +529,37 @@
     ]
   },
   {
+    "title": "Những nhóm thực phẩm ăn nhiều không tốt cho tim",
+    "content": "Bài viết nêu rõ những nhóm thực phẩm không tốt cho tim mạch, bao gồm thịt chế biến, thực phẩm nhiều muối, đường và đồ uống có gas. Các thực phẩm này không chỉ ít giá trị dinh dưỡng mà còn chứa các chất gây hại, làm tăng nguy cơ mắc bệnh tim và huyết áp. Đường tinh luyện, natri dư thừa và chất béo chuyển hóa là những yếu tố chính tác động tiêu cực đến sức khỏe tim mạch. Người tiêu dùng nên cắt giảm những thực phẩm này và thay thế bằng lựa chọn lành mạnh hơn để bảo vệ tim mạch.",
+    "link": "https://vnexpress.net/nhung-nhom-thuc-pham-an-nhieu-khong-tot-cho-tim-4860726.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Những thực phẩm nào không tốt cho tim mạch?",
+    "answers": [
+      {
+        "text": "Thịt chế biến, thực phẩm nhiều muối, đường và đồ uống có gas",
+        "correct": true
+      },
+      {
+        "text": "Rau củ quả tươi",
+        "correct": false
+      },
+      {
+        "text": "Thực phẩm hữu cơ",
+        "correct": false
+      },
+      {
+        "text": "Trái cây tươi",
+        "correct": false
+      },
+      {
+        "text": "Ngũ cốc nguyên hạt",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Hàn Quốc truy tố phi công thả nhầm bom vào khu dân cư",
     "content": "Hai phi công không quân Hàn Quốc đã bị truy tố sau vụ thả nhầm 8 quả bom xuống khu dân cư, gây thương tích cho 29 người và thiệt hại lớn về tài sản. Vụ việc xảy ra trong buổi huấn luyện vào ngày 6 tháng 3 tại Pocheon, gần biên giới Triều Tiên. Cơ quan Điều tra Hình sự của Bộ Quốc phòng cho biết lỗi nhập tọa độ sai là nguyên nhân chính gây ra sự cố.",
     "link": "https://dantri.com.vn/the-gioi/han-quoc-truy-to-phi-cong-tha-nham-bom-vao-khu-dan-cu-20250313111954107.htm",
@@ -1881,33 +1912,6 @@
     ]
   },
   {
-    "title": "Từ trong ngõ xe máy lao đầu vào ôtô - xe nào phải đền?",
-    "content": "Trong vụ tai nạn giao thông xảy ra tại Hạ Long vào ngày 9/3, một thanh niên điều khiển xe máy đã lao từ trong ngõ ra đường và va chạm mạnh vào đầu xe ôtô. Người lái xe ôtô đang di chuyển với tốc độ an toàn dưới 30 km/h và có gắn camera hành trình ghi lại sự việc. Vụ tai nạn cho thấy sự cần thiết phải chú ý và báo hiệu khi rẽ tại những khu vực tầm nhìn hạn chế để tránh tai nạn giao thông.",
-    "link": "https://vnexpress.net/tu-trong-ngo-xe-may-lao-dau-vao-oto-xe-nao-phai-den-4860385.html",
-    "cat": "phap-luat",
-    "positivity": 4,
-    "importance": 7,
-    "question": "Trong vụ tai nạn, ai là người phải bồi thường?",
-    "answers": [
-      {
-        "text": "Người đi xe máy",
-        "correct": true
-      },
-      {
-        "text": "Người lái ôtô",
-        "correct": false
-      },
-      {
-        "text": "Không ai phải bồi thường",
-        "correct": false
-      },
-      {
-        "text": "Cả hai bên đều phải bồi thường",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Một ngày của cụ bà 97 tuổi mê chạy bộ",
     "content": "Cụ bà Nguyễn Thị Huynh, 97 tuổi, sống tại TP Hà Tĩnh, duy trì thói quen chạy bộ hai lần mỗi ngày. Hàng sáng, cụ dậy sớm để tập thể dục và ăn sáng đầy đủ trước khi tham gia các hoạt động khác. Dù tuổi cao, cụ vẫn tích cực tham gia các lớp thể dục tại phòng gym và thường xuyên chạy bộ quanh công viên. Cụ cũng được con cháu ghi lại những khoảnh khắc tập luyện và chia sẻ trên mạng xã hội, thu hút sự chú ý của nhiều người.",
     "link": "https://vnexpress.net/mot-ngay-cua-cu-ba-97-tuoi-me-chay-bo-4860200.html",
@@ -1961,6 +1965,33 @@
       },
       {
         "text": "Vì muốn tiết kiệm tiền",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Từ trong ngõ xe máy lao đầu vào ôtô - xe nào phải đền?",
+    "content": "Trong vụ tai nạn giao thông xảy ra tại Hạ Long vào ngày 9/3, một thanh niên điều khiển xe máy đã lao từ trong ngõ ra đường và va chạm mạnh vào đầu xe ôtô. Người lái xe ôtô đang di chuyển với tốc độ an toàn dưới 30 km/h và có gắn camera hành trình ghi lại sự việc. Vụ tai nạn cho thấy sự cần thiết phải chú ý và báo hiệu khi rẽ tại những khu vực tầm nhìn hạn chế để tránh tai nạn giao thông.",
+    "link": "https://vnexpress.net/tu-trong-ngo-xe-may-lao-dau-vao-oto-xe-nao-phai-den-4860385.html",
+    "cat": "phap-luat",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Trong vụ tai nạn, ai là người phải bồi thường?",
+    "answers": [
+      {
+        "text": "Người đi xe máy",
+        "correct": true
+      },
+      {
+        "text": "Người lái ôtô",
+        "correct": false
+      },
+      {
+        "text": "Không ai phải bồi thường",
+        "correct": false
+      },
+      {
+        "text": "Cả hai bên đều phải bồi thường",
         "correct": false
       }
     ]
@@ -4551,6 +4582,33 @@
     ]
   },
   {
+    "title": "Từ Canada sang Việt Nam lần hai để thay khớp gối",
+    "content": "Bà Christina Phypers, 71 tuổi, từ Canada đã trở lại Việt Nam để phẫu thuật thay khớp gối phải sau khi đã thay khớp gối trái thành công hai năm trước. Bà đã chọn Bệnh viện Đa khoa Tâm Anh Hà Nội để thực hiện phẫu thuật do chi phí hợp lý và kỹ thuật tiên tiến. Sau phẫu thuật, bà có thể hồi phục nhanh chóng và dự định khám phá nhiều địa điểm nổi tiếng tại Việt Nam trong thời gian 4 tháng tới.",
+    "link": "https://vnexpress.net/tu-canada-sang-viet-nam-lan-hai-de-thay-khop-goi-4859624.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Bà Christina Phypers đã làm gì khi trở lại Việt Nam?",
+    "answers": [
+      {
+        "text": "Thay khớp gối phải",
+        "correct": true
+      },
+      {
+        "text": "Khám bệnh khác",
+        "correct": false
+      },
+      {
+        "text": "Tham quan du lịch",
+        "correct": false
+      },
+      {
+        "text": "Học tiếng Việt",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Dự báo nguy cơ sinh non để tìm cách giữ thai nhi khỏe mạnh",
     "content": "Bài viết đề cập đến việc dự báo nguy cơ sinh non để giữ thai nhi khỏe mạnh, thông qua các phương pháp như xét nghiệm PartoSure. Chị Thủy và chị Mai là hai trường hợp được điều trị khi có nguy cơ sinh non, với các biện pháp can thiệp y tế kịp thời giúp bảo vệ thai nhi. Bác sĩ khuyến cáo thai phụ cần chú ý các dấu hiệu cảnh báo và đến cơ sở y tế khi có nghi ngờ.",
     "link": "https://vnexpress.net/du-bao-nguy-co-sinh-non-de-tim-cach-giu-thai-nhi-khoe-manh-4860236.html",
@@ -4600,33 +4658,6 @@
       },
       {
         "text": "Protein, selen, vitamin B9",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Từ Canada sang Việt Nam lần hai để thay khớp gối",
-    "content": "Bà Christina Phypers, 71 tuổi, từ Canada đã trở lại Việt Nam để phẫu thuật thay khớp gối phải sau khi đã thay khớp gối trái thành công hai năm trước. Bà đã chọn Bệnh viện Đa khoa Tâm Anh Hà Nội để thực hiện phẫu thuật do chi phí hợp lý và kỹ thuật tiên tiến. Sau phẫu thuật, bà có thể hồi phục nhanh chóng và dự định khám phá nhiều địa điểm nổi tiếng tại Việt Nam trong thời gian 4 tháng tới.",
-    "link": "https://vnexpress.net/tu-canada-sang-viet-nam-lan-hai-de-thay-khop-goi-4859624.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 7,
-    "question": "Bà Christina Phypers đã làm gì khi trở lại Việt Nam?",
-    "answers": [
-      {
-        "text": "Thay khớp gối phải",
-        "correct": true
-      },
-      {
-        "text": "Khám bệnh khác",
-        "correct": false
-      },
-      {
-        "text": "Tham quan du lịch",
-        "correct": false
-      },
-      {
-        "text": "Học tiếng Việt",
         "correct": false
       }
     ]
@@ -4771,33 +4802,6 @@
     ]
   },
   {
-    "title": "Thuốc kháng viêm - 'vũ khí' trị bệnh tai mũi họng",
-    "content": "Thuốc kháng viêm đóng vai trò quan trọng trong điều trị các bệnh lý tai mũi họng, giúp giảm phù nề, giảm đau, và thúc đẩy quá trình lành thương. Việc sử dụng đúng loại thuốc và đúng chỉ định là rất cần thiết để tránh tác dụng phụ không mong muốn như suy giảm miễn dịch hay loãng xương. Các loại thuốc kháng viêm bao gồm thuốc chứa Steroid, thuốc không Steroid và thuốc kháng viêm dạng men, mỗi loại có cơ chế và tác dụng riêng. Để đạt hiệu quả cao trong điều trị, bác sĩ cần cân nhắc kỹ lưỡng khi kê đơn thuốc cho bệnh nhân.",
-    "link": "https://vnexpress.net/thuoc-khang-viem-vu-khi-tri-benh-tai-mui-hong-4860259.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Thuốc kháng viêm có vai trò gì trong điều trị bệnh tai mũi họng?",
-    "answers": [
-      {
-        "text": "Giúp giảm phù nề, giảm đau và thúc đẩy quá trình lành thương.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ có tác dụng giảm đau mà không giúp hồi phục.",
-        "correct": false
-      },
-      {
-        "text": "Không có tác dụng gì trong điều trị.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ sử dụng cho bệnh nhân viêm mũi dị ứng.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Tưởng ung thư phổi hóa rối loạn lo âu",
     "content": "Ông Đường, 62 tuổi, đã trải qua triệu chứng khó thở và hụt hơi, ban đầu nghĩ rằng mình mắc ung thư phổi, nhưng bác sĩ đã chẩn đoán ông bị rối loạn lo âu. Sau khi thực hiện các xét nghiệm và chụp CT phổi, kết quả cho thấy sức khỏe phổi của ông bình thường. Ông được điều trị bằng thuốc và tư vấn tâm lý, sau 4 ngày điều trị, triệu chứng của ông đã cải thiện đáng kể và xuất viện để điều trị ngoại trú. Rối loạn lo âu có thể gây ra nhiều triệu chứng thể chất và tâm lý, đòi hỏi sự chú ý và điều trị đúng cách để tránh các biến chứng nghiêm trọng.",
     "link": "https://vnexpress.net/tuong-ung-thu-phoi-hoa-roi-loan-lo-au-4860303.html",
@@ -4829,28 +4833,28 @@
     ]
   },
   {
-    "title": "Biến sân thượng thành vườn cà chua sai trĩu quả",
-    "content": "Chị Nguyễn Kim Thêu ở Tây Mỗ đã biến sân thượng tầng 4 của gia đình thành vườn cà chua sai trĩu quả. Bằng cách trồng cà chua bạch tuộc trong chậu nhựa và phun tưới đúng thời điểm, chị đã thành công trong việc tạo ra một giàn cà chua năng suất cao. Vườn rau này không chỉ cung cấp thực phẩm mà còn mang lại cảnh quan xanh mát cho không gian sống.",
-    "link": "https://vnexpress.net/bien-san-thuong-thanh-vuon-ca-chua-sai-triu-qua-4860044.html",
-    "cat": "gia-dinh",
-    "positivity": 9,
-    "importance": 6,
-    "question": "Chị Nguyễn Kim Thêu đã làm gì trên sân thượng của mình?",
+    "title": "Thuốc kháng viêm - 'vũ khí' trị bệnh tai mũi họng",
+    "content": "Thuốc kháng viêm đóng vai trò quan trọng trong điều trị các bệnh lý tai mũi họng, giúp giảm phù nề, giảm đau, và thúc đẩy quá trình lành thương. Việc sử dụng đúng loại thuốc và đúng chỉ định là rất cần thiết để tránh tác dụng phụ không mong muốn như suy giảm miễn dịch hay loãng xương. Các loại thuốc kháng viêm bao gồm thuốc chứa Steroid, thuốc không Steroid và thuốc kháng viêm dạng men, mỗi loại có cơ chế và tác dụng riêng. Để đạt hiệu quả cao trong điều trị, bác sĩ cần cân nhắc kỹ lưỡng khi kê đơn thuốc cho bệnh nhân.",
+    "link": "https://vnexpress.net/thuoc-khang-viem-vu-khi-tri-benh-tai-mui-hong-4860259.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Thuốc kháng viêm có vai trò gì trong điều trị bệnh tai mũi họng?",
     "answers": [
       {
-        "text": "Trồng cà chua",
+        "text": "Giúp giảm phù nề, giảm đau và thúc đẩy quá trình lành thương.",
         "correct": true
       },
       {
-        "text": "Trồng hoa",
+        "text": "Chỉ có tác dụng giảm đau mà không giúp hồi phục.",
         "correct": false
       },
       {
-        "text": "Làm nơi nghỉ ngơi",
+        "text": "Không có tác dụng gì trong điều trị.",
         "correct": false
       },
       {
-        "text": "Chơi thể thao",
+        "text": "Chỉ sử dụng cho bệnh nhân viêm mũi dị ứng.",
         "correct": false
       }
     ]
