Update generated content

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Yêu không ràng buộc",
+    "content": "Bài viết phân tích xu hướng yêu không ràng buộc đang gia tăng trong giới trẻ Trung Quốc. Zhao Shiyan, một thanh niên 25 tuổi, cho biết anh và bạn gái không cần phải dán nhãn mối quan hệ của mình và chỉ tìm kiếm niềm vui bên nhau. Xu hướng này phản ánh sự thay đổi trong quan niệm về tình yêu và hôn nhân, khi nhiều người trẻ lựa chọn mối quan hệ linh hoạt hơn để tránh áp lực và cam kết nghiêm túc. Trên mạng xã hội, chủ đề này thu hút sự quan tâm lớn và nhiều người chia sẻ trải nghiệm cá nhân về yêu không ràng buộc.",
+    "link": "https://vnexpress.net/yeu-khong-rang-buoc-4860741.html",
+    "cat": "gia-dinh",
+    "positivity": 7,
+    "importance": 6,
+    "question": "Xu hướng yêu không ràng buộc có ý nghĩa gì trong xã hội hiện đại?",
+    "answers": [
+      {
+        "text": "Nó phản ánh sự cần thiết của sự linh hoạt và tránh áp lực trong tình yêu.",
+        "correct": true
+      },
+      {
+        "text": "Nó cho thấy giới trẻ không còn tin vào tình yêu thực sự.",
+        "correct": false
+      },
+      {
+        "text": "Nó cho thấy mọi người không muốn kết hôn nữa.",
+        "correct": false
+      },
+      {
+        "text": "Nó là một hình thức mà mọi người tìm kiếm sự cô đơn.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Đề xuất đầu tư 11.000 tỷ đồng nâng cấp sân bay Chu Lai",
     "content": "UBND tỉnh Quảng Nam đã kiến nghị Thủ tướng cho phép triển khai dự án nâng cấp sân bay Chu Lai với tổng mức đầu tư 11.000 tỷ đồng theo hình thức PPP. Dự án sẽ bao gồm việc xây dựng đường cất hạ cánh mới, nhà ga hành khách và nhà ga hàng hóa nhằm đáp ứng nhu cầu tăng trưởng. Sân bay hiện tại có công suất 1,2 triệu hành khách mỗi năm và dự kiến sẽ nâng lên 10 triệu vào năm 2030.",
     "link": "https://vnexpress.net/de-xuat-dau-tu-11-000-ty-dong-nang-cap-san-bay-chu-lai-4860773.html",
@@ -4376,95 +4403,6 @@
       },
       {
         "text": "Vì buôn bán ma túy",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Trường Đại học CMC tặng laptop cho sinh viên nhập học năm 2025",
-    "content": "Trường Đại học CMC sẽ tặng laptop cho các tân sinh viên nhập học năm 2025 nhằm hỗ trợ việc học tập và nghiên cứu trong môi trường công nghệ. Chương trình này được thực hiện lần thứ hai liên tiếp và nằm trong chiến lược chuyển đổi AI của trường. Các sinh viên đủ điều kiện sẽ nhận laptop nếu tham gia kỳ thi Đánh giá năng lực hoặc đạt các tiêu chí học tập nhất định.",
-    "link": "https://dantri.com.vn/giao-duc/truong-dai-hoc-cmc-tang-laptop-cho-sinh-vien-nhap-hoc-nam-2025-20250312112231915.htm",
-    "cat": "giao-duc",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Trường Đại học CMC sẽ tặng gì cho sinh viên nhập học năm 2025?",
-    "answers": [
-      {
-        "text": "Laptop",
-        "correct": true
-      },
-      {
-        "text": "Học bổng",
-        "correct": false
-      },
-      {
-        "text": "Sách giáo khoa",
-        "correct": false
-      },
-      {
-        "text": "Thiết bị thể thao",
-        "correct": false
-      },
-      {
-        "text": "Thẻ sinh viên miễn phí",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Tưởng ung thư phổi hóa rối loạn lo âu",
-    "content": "Ông Đường, 62 tuổi, đã trải qua triệu chứng khó thở và hụt hơi, ban đầu nghĩ rằng mình mắc ung thư phổi, nhưng bác sĩ đã chẩn đoán ông bị rối loạn lo âu. Sau khi thực hiện các xét nghiệm và chụp CT phổi, kết quả cho thấy sức khỏe phổi của ông bình thường. Ông được điều trị bằng thuốc và tư vấn tâm lý, sau 4 ngày điều trị, triệu chứng của ông đã cải thiện đáng kể và xuất viện để điều trị ngoại trú. Rối loạn lo âu có thể gây ra nhiều triệu chứng thể chất và tâm lý, đòi hỏi sự chú ý và điều trị đúng cách để tránh các biến chứng nghiêm trọng.",
-    "link": "https://vnexpress.net/tuong-ung-thu-phoi-hoa-roi-loan-lo-au-4860303.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Rối loạn lo âu có những triệu chứng gì?",
-    "answers": [
-      {
-        "text": "Hồi hộp, khó thở, đau đầu",
-        "correct": true
-      },
-      {
-        "text": "Sốt cao",
-        "correct": false
-      },
-      {
-        "text": "Chân tay lạnh",
-        "correct": false
-      },
-      {
-        "text": "Ngất xỉu",
-        "correct": false
-      },
-      {
-        "text": "Đau bụng",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Thuốc kháng viêm - 'vũ khí' trị bệnh tai mũi họng",
-    "content": "Thuốc kháng viêm đóng vai trò quan trọng trong điều trị các bệnh lý tai mũi họng, giúp giảm phù nề, giảm đau, và thúc đẩy quá trình lành thương. Việc sử dụng đúng loại thuốc và đúng chỉ định là rất cần thiết để tránh tác dụng phụ không mong muốn như suy giảm miễn dịch hay loãng xương. Các loại thuốc kháng viêm bao gồm thuốc chứa Steroid, thuốc không Steroid và thuốc kháng viêm dạng men, mỗi loại có cơ chế và tác dụng riêng. Để đạt hiệu quả cao trong điều trị, bác sĩ cần cân nhắc kỹ lưỡng khi kê đơn thuốc cho bệnh nhân.",
-    "link": "https://vnexpress.net/thuoc-khang-viem-vu-khi-tri-benh-tai-mui-hong-4860259.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Thuốc kháng viêm có vai trò gì trong điều trị bệnh tai mũi họng?",
-    "answers": [
-      {
-        "text": "Giúp giảm phù nề, giảm đau và thúc đẩy quá trình lành thương.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ có tác dụng giảm đau mà không giúp hồi phục.",
-        "correct": false
-      },
-      {
-        "text": "Không có tác dụng gì trong điều trị.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ sử dụng cho bệnh nhân viêm mũi dị ứng.",
         "correct": false
       }
     ]
