Update generated content

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,37 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Công ty thuộc Vingroup chuyển nhượng một phần dự án Vinhomes Cổ Loa",
+    "content": "Công ty VEFAC, thuộc Tập đoàn Vingroup, vừa được UBND TP Hà Nội cho phép chuyển nhượng một phần dự án Vinhomes Cổ Loa ở huyện Đông Anh với tổng mức đầu tư khoảng 30.360,5 tỷ đồng. Phần chuyển nhượng bao gồm đất xây dựng nhà ở cao tầng, nhà ở thấp tầng và đất công cộng với tổng diện tích lên đến 75 ha. Dự án có tổng diện tích sử dụng đất 261,46 ha và dự kiến phục vụ cho khoảng 37.300 người, dự kiến hoàn thành vào quý III-2025.",
+    "link": "https://tuoitre.vn/cong-ty-thuoc-vingroup-chuyen-nhuong-mot-phan-du-an-vinhomes-co-loa-20250313123319155.htm",
+    "cat": "kinh-doanh",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Công ty nào thuộc Vingroup chuyển nhượng dự án Vinhomes Cổ Loa?",
+    "answers": [
+      {
+        "text": "VEFAC",
+        "correct": true
+      },
+      {
+        "text": "T&T",
+        "correct": false
+      },
+      {
+        "text": "Vinhomes",
+        "correct": false
+      },
+      {
+        "text": "Tập đoàn Vingroup",
+        "correct": false
+      },
+      {
+        "text": "Công ty Cổ phần Thời đại mới T&T",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Truy tố cựu trung úy công an giết người tình rồi vứt xác xuống sông",
     "content": "Cựu trung úy công an Ngô Minh Thông bị Viện kiểm sát nhân dân tỉnh Tiền Giang truy tố về tội giết người và cướp tài sản sau khi giết người tình N.T.H. vào ngày 27-12-2023. Sau khi gây án, Thông đã vứt xác nạn nhân xuống sông Hàm Luông và cố gắng che giấu tội ác bằng cách nhắn tin giả mạo từ điện thoại của nạn nhân. Thông khai nhận đã ra tay giết H. vì mâu thuẫn tình cảm và hiện đang bị điều tra với tình trạng tâm lý rối loạn.",
     "link": "https://tuoitre.vn/truy-to-cuu-trung-uy-cong-an-giet-nguoi-tinh-roi-vut-xac-xuong-song-2025031309283986.htm",
